# robot-arm-with-controller

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_roboturdf.yaml
hardware/: arduino.cpp  rrbot.cpp
hardware/include/ros2_control_demo_example_1/: rrbot.hpp
launch/: kp.display.launch.py  rrbot_controllers.yaml  rrbot_forward_position_publisher.yaml  test_forward_position_controller.launch.py
meshes/: base_link.STL  efrewf.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  my_first_base_link.STL  my_first_link1.STL
solidworks/: Assem2.SLDASM  base6.SLDPRT  part3.SLDPRT
solidworks/sg90/: Assem2.SLDASM  Part2-assembly-testing.SLDDRW  Part2-assembly-testing.SLDPRT  Part2-testing.STL  base-assembly-with-sg90.SLDASM  sg90-part1.SLDDRW  sg90-part1.SLDPRT  sg90-part2.SLDDRW  sg90-part2.SLDPRT  ~$rough_body.SLDPRT
urdf/: roboturdf.urdf
