<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urdf_tutorial</name>
  <version>1.1.0</version>
  <description>This package contains a number of URDF tutorials.</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD 3-clause</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control_demo_description</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
